<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.badr.hourimeche.ensakenitra.staticActivitys.ensak.MainENSAK">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <Button
            android:id="@+id/bt1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="bt1"
            android:text="@string/administration"
            android:textSize="10sp"
            android:background="@color/white"/>

        <Button
            android:id="@+id/bt2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="bt2"
            android:text="@string/corps_enseignant"
            android:textSize="10sp"
            android:background="@color/white"/>

        <Button
            android:id="@+id/bt3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="bt3"
            android:text="@string/infrastrucrures"
            android:textSize="10sp"
            android:background="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <Button
            android:id="@+id/bt4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="bt4"
            android:text="@string/mot_du_directeur"
            android:textSize="10sp"
            android:background="@color/white"/>

        <Button
            android:id="@+id/bt5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="bt5"
            android:text="@string/pr_sentation"
            android:textSize="10sp"
            android:background="@color/white" />

        <Button
            android:id="@+id/bt6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="bt6"
            android:text="@string/r_glement_int_rieur_de_l_ecole"
            android:textSize="10sp"
            android:background="@color/white"/>
    </LinearLayout>

</LinearLayout>
