<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.badr.hourimeche.ensakenitra.staticActivitys.formations.MainFORMATIONS">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <Button
            android:id="@+id/bt1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:onClick="bt1"
            android:text="@string/architecture_p_dagogique"
            android:textSize="10sp" />

        <Button
            android:id="@+id/bt2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:onClick="bt2"
            android:text="@string/ann_es_pr_paratoires"
            android:textSize="10sp" />

        <Button
            android:id="@+id/bt3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:onClick="bt3"
            android:text="@string/cycle_ing_nieur"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <Button
            android:id="@+id/bt4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:onClick="bt4"
            android:text="@string/cycle_master"
            android:textSize="10sp" />

        <Button
            android:id="@+id/bt5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:onClick="bt5"
            android:text="@string/formations_continues"
            android:textSize="10sp" />

        <Button
            android:id="@+id/bt6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:onClick="bt6"
            android:text="@string/modalit_s_d_admission"
            android:textSize="10sp" />
    </LinearLayout>

</LinearLayout>

