<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:drawableBottom="@drawable/administrator"
                    android:gravity="top"
                    android:onClick="but1"
                    android:padding="15dp"
                    android:text="@string/administration"
                    android:textAlignment="center" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:drawableBottom="@drawable/teacher"
                    android:gravity="top"
                    android:onClick="but2"
                    android:padding="15dp"
                    android:text="@string/corps_enseignant"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:drawableBottom="@drawable/school"
                    android:gravity="top"
                    android:onClick="but3"
                    android:padding="15dp"
                    android:text="@string/infrastrucrures"
                    android:textAlignment="center" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:drawableBottom="@drawable/presentation"
                    android:gravity="top"
                    android:onClick="but4"
                    android:padding="15dp"
                    android:text="@string/mot_du_directeur"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:drawableBottom="@drawable/barschart"
                    android:gravity="top"
                    android:onClick="but5"
                    android:padding="15dp"
                    android:text="@string/pr_sentation"
                    android:textAlignment="center" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:drawableBottom="@drawable/amonestation"
                    android:gravity="top"
                    android:onClick="but6"
                    android:padding="15dp"
                    android:text="@string/r_glement_int_rieur_de_l_ecole"
                    android:textAlignment="center" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />
</android.support.v4.widget.DrawerLayout>

